# scheduler

./:  Dockerfile  .gitignore  README.md  pyproject.toml  requirements.txt
src/calendar_agent/: __init__.py  agent_setup.py  test_calendar.py
src/calendar_agent/api/: v1.py
src/calendar_agent/tools/availability_checker/: impl.py
src/calendar_agent/tools/calendar_event/: __init__.py  google_calendar.py  impl.py
src/calendar_agent/tools/calendar_event/tests/: test_calendar_event_impl.py
tests/integration/: test_schedule_api.py
