[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.1.0"
description = "Microservice that hosts multiple personal scheduling agents."
authors = [{ name = "Demetri Lopez", email = "demetri.lopez1599@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "openai-agents>=0.2.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30.0",
    "google-api-python-client>=2.126",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "*_test.py"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["src", "tests"]
markers = [
    "integration: slow API / external-service tests"
]